--- a/index.html
+++ b/index.html
@@ -15,7 +15,16 @@
                 <a href="/">
                     <img src="img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
-           <nav class="navegacion">
+
+             <div class="mobile-menu">
+                 <a href="#navegacion">
+                     <img src="img/barras.svg" alt="icono menu">
+                 </a>
+             </div>
+
+
+
+           <nav id="navegacion" class="navegacion">
                <a href="nosotros.html">Nosotros</a>
                <a href="anuncios.html">Anuncios</a>
                <a href="blog.html">Blog</a>
@@ -26,6 +35,7 @@
        <h1>Venta de Casas y Departamentos <br> <br> Exclusivos de lujo</h1>
     </div> <!--contenedor-->
     </header>
+
 
     <section class="contenedor seccion">
          <h2 class="encabezado-nosotros">Mas Sobre Nosotros</h2>
@@ -110,7 +120,7 @@
                        </ul>
     
 
-                         <a href="#" class="boton boton-amarillo d-block">Ver Propiedad</a>
+                         <a href="anuncio.html" class="boton boton-amarillo d-block">Ver Propiedad</a>
                   </div>
                </div>
 
@@ -169,7 +179,9 @@
              <img src="img/blog1.jpg" alt="Entrada de Blog">
         </div>
          <div class="texto-entrada">
+           <a href="entrada.html">
             <h4>Terraza en el Puerto de Tu casa</h4>
+        </a>
             <p>Escrito el :<span> 23/08/2020 </span> por: karol </p>
              <p>Consejos para construir una terraza en el techo de tu casa, con los mejores 
               materiales </p>
@@ -181,8 +193,10 @@
          <img src="img/blog2.jpg" alt= "Entrada de Blog">
         </div>
         <div class="texto-entrada">
-         <h4>Guia para la decoracion de tu hogar</h4>
-          <p>Escrito el : <span> 23/08/2020 </span> por: karol </p>
+         <a href="entrada.html">
+            <h4>Guia para la decoracion de tu hogar</h4>
+        </a>
+            <p>Escrito el : <span> 23/08/2020 </span> por: karol </p>
          <p> maximixa el espacio en tu hogar con esta guia, aprende a combinar muebles y colores
          para darle vida a tu espacio </p>
         </div>
