--- a/nosotros.html
+++ b/nosotros.html
@@ -18,12 +18,18 @@
               <img src="img/logo.svg" alt="">
            </a>
       
-           <nav class="navegacion">
-               <a href="nosotros.html">Nosotros</a>
-               <a href="anuncios.html">Anuncios</a>
-               <a href="blog.html">Blog</a>
-               <a href="contacto.html">Contacto</a>
-           </nav>
+           <div class="mobile-menu">
+            <a href="#navegacion">
+                <img src="img/barras.svg" alt="icono menu">
+            </a>
+        </div>
+
+      <nav id="navegacion" class="navegacion">
+          <a href="nosotros.html">Nosotros</a>
+          <a href="anuncios.html">Anuncios</a>
+          <a href="blog.html">Blog</a>
+          <a href="contacto.html">Contacto</a>
+      </nav>
         </div>
     </div> <!--contenedor-->
     </header>
